fixed wrong font name

--- a/styles/style.css
+++ b/styles/style.css
@@ -277,7 +277,7 @@ h2 {
 
 p {
   font-size: 2rem;
-  font-family: 'Open Serif', serif;
+  font-family: 'Open Sans', serif;
 }
 
 img {
